--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "eth-sig-util": "^3.0.1",
+    "ipfs-http-client": "^50.1.1",
+    "ipfs-mini": "^1.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ionicons": "^4.2.0",
